--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Mar 24 16:20:12 MDT 2021
-sdk.dir=C\:\\Users\\Riley\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\Riley\\AppData\\Local\\Android\\Sdk
+sdk.dir=/home/tyler/Android/Sdk
